--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">Who I am</a></li>
+							<li><a href="#two">What I do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -62,38 +62,23 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>What I do</h2>
+							<p>Here's a couple projects I have been working on in my Writing and Digital Media class (this page itself is one of those projects).</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<a href="https://medium.com/@dorianbloy5_6068/alices-adventures-in-web-development-ee2338662e3c">
+										<span class="icon solid major fas fa-blog"></span>
+										<h3>Alice's Adventures in Web Development</h3>
+										<p>My experiences jumping down the rabbit hole that is learning about web development. I ended up learning about the basics of HTTP, relational databases, client-side code, and server APIs.</p>
+									</a>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank">
+										<span class="icon solid major fas fa-podcast"></span>
+										<h3>The secrets behind the Among Us success</h3>
+									</a>
+									<p>A podcast I helped create along with Bob Monroe, Kurt Karpin, Amelia Gay, Evan Ott, and Yuzhi Ma. We talk about some of the appeal behind the trending table-top game in disguise: Among Us.</p>
+									<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/922453855&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/yuzhi-ma" title="Yuzhi Ma" target="_blank" style="color: #cccccc; text-decoration: none;">Yuzhi Ma</a> · <a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank" style="color: #cccccc; text-decoration: none;">The secrets behind the Among Us success</a></div>
 								</section>
 							</div>
 							<ul class="actions">
