--- a/index.html
+++ b/index.html
@@ -15,156 +15,165 @@
 	<body class="is-preload">
 
 		<!-- Sidebar -->
-			<section id="sidebar">
+		<section id="sidebar">
+			<div class="inner">
+				<nav>
+					<ul>
+						<!-- <li><a href="#intro">Welcome</a></li> -->
+						<li><a href="#one">Who I am</a></li>
+						<li><a href="#two">What I do</a></li>
+						<!-- <li><a href="#three">Get in touch</a></li> -->
+					</ul>
+				</nav>
+			</div>
+		</section>
+
+		<!-- Wrapper -->
+		<div id="wrapper">
+
+			<!-- Intro -->
+			<!-- <section id="intro" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who I am</a></li>
-							<li><a href="#two">What I do</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
+					<h1>Hyperspace</h1>
+					<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
+					and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+					<ul class="actions">
+						<li><a href="#one" class="button scrolly">Learn more</a></li>
+					</ul>
+				</div>
+			</section> -->
+
+			<!-- One -->
+			<section id="one" class="wrapper style2 spotlights">
+				<section>
+					<a href="#" class="image"><img src="images/me.jpeg" alt="" data-position="center center" /></a>
+					<div class="content">
+						<div class="inner">
+							<h2>Dorian Bloy</h2>
+							<p>Computer Science and Mathematics major at Virginia Tech</p>
+							<ul class="actions">
+								<li><a href="dorian_bloy.pdf" class="button">Learn more</a></li>
+							</ul>
+						</div>
+					</div>
+				</section>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="wrapper style3 fade-up">
+				<div class="inner">
+					<h2>What I do</h2>
+					<p>Here's a couple projects I have been working on in my Writing and Digital Media class (this page itself is one of those projects).</p>
+					<div class="features">
+						<section>
+							<a href="https://medium.com/@dorianbloy5_6068/alices-adventures-in-web-development-ee2338662e3c">
+								<span class="icon solid major fas fa-blog"></span>
+								<h3>Alice's Adventures in Web Development</h3>
+								<p>My experiences jumping down the rabbit hole that is learning about web development. I ended up learning about the basics of HTTP, relational databases, client-side code, and server APIs.</p>
+								<img src="https://miro.medium.com/max/700/0*4TJLeZbGTiw3MMIP" alt="" style="height: 200px">
+							</a>
+						</section>
+						<section>
+							<a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank">
+								<span class="icon solid major fas fa-podcast"></span>
+								<h3>The secrets behind the Among Us success</h3>
+							</a>
+							<p>A podcast I helped create along with Bob Monroe, Kurt Karpin, Amelia Gay, Evan Ott, and Yuzhi Ma. We talk about some of the appeal behind the trending table-top game in disguise: Among Us.</p>
+							<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/922453855&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/yuzhi-ma" title="Yuzhi Ma" target="_blank" style="color: #cccccc; text-decoration: none;">Yuzhi Ma</a> · <a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank" style="color: #cccccc; text-decoration: none;">The secrets behind the Among Us success</a></div>
+						</section>
+						<section>
+							<a href="https://youtu.be/lrbSPkyjCFo">
+								<span class="icon solid major fas fa-video"></span>
+								<h3>A Simple and Satisfying Proof about Primes</h3>
+								<p>Here's a simple proof that there are infinitely many primes. What's significant is that it has been around for thousands of years, yet the reasoning is clear and still taught today.</p>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/lrbSPkyjCFo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</a>
+						</section>
+					</div>
+					<!-- <ul class="actions">
+						<li><a href="generic.html" class="button">Learn more</a></li>
+					</ul> -->
 				</div>
 			</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+			<!-- Three -->
+			<!-- <section id="three" class="wrapper style1 fade-up">
+				<div class="inner">
+					<h2>Get in touch</h2>
+					<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+					<div class="split style1">
 						<section>
-							<a href="#" class="image"><img src="images/me.jpeg" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Dorian Bloy</h2>
-									<p>Computer Science and Mathematics major at Virginia Tech</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field half">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field half">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="5"></textarea>
+									</div>
 								</div>
-							</div>
+								<ul class="actions">
+									<li><a href="" class="button submit">Send Message</a></li>
+								</ul>
+							</form>
 						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What I do</h2>
-							<p>Here's a couple projects I have been working on in my Writing and Digital Media class (this page itself is one of those projects).</p>
-							<div class="features">
-								<section>
-									<a href="https://medium.com/@dorianbloy5_6068/alices-adventures-in-web-development-ee2338662e3c">
-										<span class="icon solid major fas fa-blog"></span>
-										<h3>Alice's Adventures in Web Development</h3>
-										<p>My experiences jumping down the rabbit hole that is learning about web development. I ended up learning about the basics of HTTP, relational databases, client-side code, and server APIs.</p>
-									</a>
-								</section>
-								<section>
-									<a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank">
-										<span class="icon solid major fas fa-podcast"></span>
-										<h3>The secrets behind the Among Us success</h3>
-									</a>
-									<p>A podcast I helped create along with Bob Monroe, Kurt Karpin, Amelia Gay, Evan Ott, and Yuzhi Ma. We talk about some of the appeal behind the trending table-top game in disguise: Among Us.</p>
-									<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/922453855&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/yuzhi-ma" title="Yuzhi Ma" target="_blank" style="color: #cccccc; text-decoration: none;">Yuzhi Ma</a> · <a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank" style="color: #cccccc; text-decoration: none;">The secrets behind the Among Us success</a></div>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
+						<section>
+							<ul class="contact">
+								<li>
+									<h3>Address</h3>
+									<span>12345 Somewhere Road #654<br />
+									Nashville, TN 00000-0000<br />
+									USA</span>
+								</li>
+								<li>
+									<h3>Email</h3>
+									<a href="#">user@untitled.tld</a>
+								</li>
+								<li>
+									<h3>Phone</h3>
+									<span>(000) 000-0000</span>
+								</li>
+								<li>
+									<h3>Social</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
-								</section>
-							</div>
-						</div>
-					</section>
+								</li>
+							</ul>
+						</section>
+					</div>
+				</div>
+			</section> -->
 
-			</div>
+		</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+		<footer id="footer" class="wrapper style1-alt">
+			<div class="inner">
+				<ul class="menu">
+					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
