moved podcast paragraph into link

--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 							<a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank">
 								<span class="icon solid major fas fa-podcast"></span>
 								<h3>The secrets behind the Among Us success</h3>
+								<p>A podcast I helped create along with Bob Monroe, Kurt Karpin, Amelia Gay, Evan Ott, and Yuzhi Ma. We talk about some of the appeal behind the trending table-top game in disguise: Among Us.</p>
 							</a>
-							<p>A podcast I helped create along with Bob Monroe, Kurt Karpin, Amelia Gay, Evan Ott, and Yuzhi Ma. We talk about some of the appeal behind the trending table-top game in disguise: Among Us.</p>
-							<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/922453855&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/yuzhi-ma" title="Yuzhi Ma" target="_blank" style="color: #cccccc; text-decoration: none;">Yuzhi Ma</a> · <a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secrets behind the Among Us success" target="_blank" style="color: #cccccc; text-decoration: none;">The secrets behind the Among Us success</a></div>
+							<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/941705644&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+							<div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+								<a href="https://soundcloud.com/yuzhi-ma" title="Yuzhi Ma" target="_blank" style="color: #cccccc; text-decoration: none;">Yuzhi Ma</a> · <a href="https://soundcloud.com/yuzhi-ma/among-us-strategy" title="The secret behind the Among Us success" target="_blank" style="color: #cccccc; text-decoration: none;">The secret behind the Among Us success</a>
+							</div>
 						</section>
 						<section>
 							<a href="https://youtu.be/lrbSPkyjCFo">
